# LangChain-and-LangGraph

./: .env  .gitignore  LCEL.ipynb  RAG.ipynb  bert.ipynb  bert_and_xlnet.ipynb  huggingface.ipynb  index.html  langChain.ipynb  langChain_intro.ipynb  llm_models.py  pyproject.toml  question_answer_model.ipynb  requirements.txt  xlnet.ipynb
Model I/O/: langchain01.ipynb
model_I&O/: langchain_input.ipynb  langchain_output.ipynb
vectorstore_db/: chroma.sqlite3
