[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "cleantext>=1.1.4",
    "datasets>=4.8.5",
    "docx2txt>=0.9",
    "emoji>=2.15.0",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "fastembed>=0.8.0",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.15",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "protobuf==3.20.3",
    "pypdf>=6.10.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers[torch]>=5.6.2",
]
